...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    <Spinner-->
    <!--        android:id="@+id/spinner_detect_corners_version_num"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:ems="10"-->
    <!--        android:gravity="center"-->
    <!--        android:hint="@string/detect_corners_version_number_hint"-->
    <!--        android:inputType="number"-->
...
        <!--                app:layout_constraintTop_toTopOf="parent"-->
        <!--                app:layout_constraintVertical_bias="0.484"-->
        <!--                app:srcCompat="@drawable/corner" />-->
        <!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

        <ProgressBar
            android:id="@+id/progressBar2_scanning_answers"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
